--- a/index.html
+++ b/index.html
@@ -7,59 +7,73 @@
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="fontello.css">
     <title>Curriculum Vitae</title>
 </head>
 <body>
-<header class="header">
-    <h1>Aleksey Dobrovolsky</h1>
-    <p>Curriculum Vitae</p>
-</header>
-<main class="main">
-    <aside class="contact">
-        <img src="assets/image_resized.png" alt="Aleksey Dobrovolsky photo">
-        <h2>Common information</h2>
-        <p><strong>Name:</strong>Aleksey Dobrovolsky</p>
-        <p><strong>Date of birth:</strong>11 September 1991</p>
-        <p><strong>Current position:</strong>QA Engineer</p>
-        <p><strong>Years in IT:</strong>>5</p>
-    </aside>
-    <section>
-        <article class="summary">
-            <h2>Summary</h2>
-            <p>I've been working in IT more then 5 years as a QA engineer but every time try to open something new in
-                the sphere. I have a great experience to work as with outsource as with product companies with different
-                processes and technologies. And for now I'm looking forward to enter IT as a Front End developer and I
-                hope it will be soon.</p>
-        </article>
-        <article class="education">
-            <h2>Institution</h2>
-            <p>Belarusian State University of Informatics and Radioelectronics</p>
-            <h2>Speciality</h2>
-            <p>Data Security in Telecommunications / Telecommunications engineer/p>
-            <h2>Graduated</h2>
-            <p>2014</p>
-        </article>
-        <article class="language">
-            <h2>Foreign languages</h2>
-            <p>English - Intermediate (B1)<br>Using...TBD</p>
-        </article>
-        <article class="skill">
-            <h2>Technical skills</h2>
-            <p><strong>Programming languages, document markup languages:</strong> Java; JavaScript; HTML; CSS</p>
-            <p><strong>DBMS and DB tools:</strong> MySQL; MS SQL; Oracle</p>
-            <p><strong>Project Management and Issues Tracking tools:</strong> JIRA, TestLink, TestRail, IBM Rational ClearQuest</p>
-            <p><strong>Platforms:</strong> Windows 98-Windows 10; Windows Server 2003-2012; Linux (Ubuntu, Debian, Fedora Core); MAC OS (10.4, 10.5)</p>
-            <p><strong>Network technologies:</strong> TCP/IP; VPN</p>
-            <p><strong>Virtual platforms:</strong> VMware Workstation; Virtual Box</p>
-            <p><strong>Automation tools:</strong> Selenium (Java); SoapUI; Apache JMeter; Postman</p>
-            <p><strong>Code examples:</strong>Link to <a href="https://github.com/AlexD1991">GitHub</a></p>
-        </article>
-    </section>
-</main>
-<footer>
-    <address><img src="#" alt="phone"><a href="tel:375297698999">+375 29 769 89 99</a></address>
-    <address><img src="#" alt="mail"><a href="mailto:a.dobrovolsky1991@gmail.com">a.dobrovolsky1991@gmail.com</a></address>
-    <address><img src="#" alt="skype"><a href="skype:alexey_dobrovolskiy?chat">alexey_dobrovolskiy</a></address>
-</footer>
+<div class="wrap">
+    <header class="header">
+        <p>Curriculum Vitae</p>
+        <h1>Aleksey Dobrovolsky</h1>
+    </header>
+    <main class="main">
+        <aside class="aside">
+            <img src="assets/image_resized.png" alt="Aleksey Dobrovolsky photo">
+            <p><strong>Name: </strong>Aleksey Dobrovolsky</p>
+            <p><strong>Date of birth: </strong>11 September 1991</p>
+            <p><strong>Current position: </strong>QA Engineer</p>
+            <p><strong>Years in IT: </strong>>5</p>
+        </aside>
+        <section class="section">
+            <article class="summary">
+                <h2>Summary</h2>
+                <p>I've been working in IT more then 5 years as a QA engineer but every time try to open something new
+                    in
+                    the sphere. I have a great experience to work as with outsource as with product companies with
+                    different
+                    processes and technologies. And for now I'm looking forward to enter IT as a Front End developer and
+                    I
+                    hope it will be soon.</p>
+            </article>
+            <div class="line"></div>
+            <article class="education">
+                <h2>Institution</h2>
+                <p>Belarusian State University of Informatics and Radioelectronics</p>
+                <h2>Speciality</h2>
+                <p>Data Security in Telecommunications / Telecommunication engineer
+                <h2>Graduated</h2>
+                <p>2014</p>
+            </article>
+            <div class="line"></div>
+            <article class="language">
+                <h2>Foreign languages</h2>
+                <p>English - Intermediate (B1)<br>English communication is a neccessary part 
+                    of my current job as I work in a multinational company. So taking part in 
+                    conversation with native and non-native speakers is my routine. As well 
+                    I improve my English by visiting the speaking cources of the 'Streamline' 
+                    school.</p>
+            </article>
+            <div class="line"></div>
+            <article class="skill">
+                <h2>Technical skills</h2>
+                <p><strong>Programming, document markup languages:</strong> Java; JavaScript; HTML; CSS</p>
+                <p><strong>DB tools:</strong> MySQL; MS SQL; Oracle</p>
+                <p><strong>Project Management and Issues Tracking tools:</strong> JIRA, TestLink, TestRail, IBM Rational
+                    ClearQuest</p>
+                <p><strong>Platforms:</strong> Windows 98-Windows 10; Windows Server 2003-2012; Linux; MAC OS</p>
+                <p><strong>Network technologies:</strong> TCP/IP; VPN</p>
+                <p><strong>Virtual platforms:</strong> VMware Workstation; Virtual Box</p>
+                <p><strong>Automation tools:</strong> Selenium (Java); SoapUI; Apache JMeter; Postman</p>
+                <p><strong>Code examples:</strong> Link to <a href="https://github.com/AlexD1991">GitHub</a></p>
+            </article>
+        </section>
+    </main>
+    <footer class="footer">
+        <address><a href="tel:375297698999"><i class="icon-mobile">+375 29 769 89 99</i></a></address>
+        <address><a href="mailto:a.dobrovolsky1991@gmail.com"><i class="icon-mail">a.dobrovolsky1991@gmail.com</i></a>
+        </address>
+        <address><a href="skype:alexey_dobrovolskiy?chat"><i class="icon-skype">alexey_dobrovolskiy</i></a></address>
+    </footer>
+</div>
 </body>
 </html>
