--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="fontello.css">
-    <title>Curriculum Vitae</title>
+    <title>CV - Aleksey Dobrovolsky</title>
 </head>
 <body>
 <div class="wrap">
